tests/lean/248.lean.expected.out
248.lean:1:2-1:20: error: Invalid `implemented_by` argument `foo`: Definition cannot be implemented by itself
