tests/lean/248.lean
@[implementedBy foo] opaque foo (x : Nat) : Nat
